force-app/main/default/objects/NPN_DocuSign_Id__c/NPN_DocuSign_Id__c.object-meta.xml
<CustomObject>
    <description>NPN : Automate Onboarding DocuSign: This Object is used for getting the templates Ids from DocuSign in NPN On-boarding process</description>
    <label>NPN_DocuSign_Id</label>
    <nameField>
        <label>NPN_DocuSign_Id Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN_DocuSign_Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>