force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Add_On_Contracts_Packet__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Contracts_Packet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add On Contracts Packet</label>
    <type>Checkbox</type>
</CustomField>