force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Competency_Termination__c.field-meta.xml
<CustomField>
    <fullName>Competency_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Termination</label>
    <type>Checkbox</type>
</CustomField>