force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Contracts_Packet__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Packet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts Packet</label>
    <type>Checkbox</type>
</CustomField>