force-app/main/default/objects/NPN_DocuSign_Id__c/fields/CSP_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>CSP_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSP Yes/No</label>
    <type>Checkbox</type>
</CustomField>