force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Demotion__c.field-meta.xml
<CustomField>
    <fullName>Demotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demotion</label>
    <type>Checkbox</type>
</CustomField>