force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Docusign_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Template_ID__c</fullName>
    <label>Docusign Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>