force-app/main/default/objects/NPN_DocuSign_Id__c/fields/NPN_Docusign_Region__c.field-meta.xml
<CustomField>
    <fullName>NPN_Docusign_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPN_Docusign_Region</label>
    <referenceTo>NPN_Docusign_Region__c</referenceTo>
    <relationshipLabel>NPN_DocuSign_Ids</relationshipLabel>
    <relationshipName>NPN_DocuSign_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>