force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotion</label>
    <type>Checkbox</type>
</CustomField>