force-app/main/default/objects/NPN_DocuSign_Id__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination</label>
    <type>Checkbox</type>
</CustomField>