force-app/main/default/objects/NPN_DocuSign_Id__c/listViews/All_PK.listView-meta.xml
<ListView>
    <fullName>All_PK</fullName>
    <columns>NAME</columns>
    <columns>NPN_Docusign_Comptency__c</columns>
    <columns>NPN_DocusiNPN_Docusign_Progn_ProgramType__c</columns>
    <columns>NPN_Docusign_Region__c</columns>
    <columns>NPN_Docusign_SubProgramType__c</columns>
    <columns>Docusign_Template_ID__c</columns>
    <columns>Contracts_Packet__c</columns>
    <columns>CSP_Yes_No__c</columns>
    <columns>TemplateName__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NPN_Docusign_Region__c</field>
        <operation>notContain</operation>
        <value>NOT IN USE</value>
    </filters>
    <label>All-PK</label>
    <language>en_US</language>
</ListView>